...
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_sync_problem"
                    android:layout_gravity="center"
                    android:contentDescription="@string/sync"/>

                <TextView
                    android:id="@+id/item_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/item_book_sync_needed_icon"
                    android:layout_alignBaseline="@id/item_book_sync_needed_icon"
                    android:layout_marginEnd="@dimen/item_book_padding"
                    android:layout_alignParentStart="true"
...
                <ImageView
                    style="@style/BookItemInfoIcon"
                    android:src="@drawable/ic_format_list_bulleted"
                    android:contentDescription="@string/book_notes_count"/>

                <TextView
                    android:id="@+id/item_book_note_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    tools:text="@string/books_book_notes_count_sample"
                    android:textSize="?attr/item_book_details_text_size"/>
            </LinearLayout>
...
                <ImageView
                    style="@style/BookItemInfoIcon"
                    android:src="@drawable/ic_info_outline"
                    android:contentDescription="@string/book_last_action"/>

                <TextView
                    android:id="@+id/item_book_last_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    tools:text="@string/books_book_sync_last_action_sample"
                    android:textSize="?attr/item_book_details_text_size"/>
            </LinearLayout>
...
