...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/fragment_books_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar style="@style/LoadingProgressBar" />

            <androidx.recyclerview.widget.RecyclerView
...
            android:id="@+id/sync_toolbar_progress"
            style="@style/SyncProgressIndicator" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Fab.Add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

