<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_new_book_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_edge"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

</LinearLayout>
